wordpress.benefitscheckup.org/wp-content/themes/bcuwptheme/bcu.css
/* ... */
input[type="text"], select {
  border: 1px solid #CCC;
  font-size: 12px;
  font-style: italic;
  background: #ffff;
  color: #333;
  padding: 5px;
  border-radius: 0;
  float: left;
  line-height: 18px
}
a.go-button {
  display: block;
  margin: 3px 4px;
  vertical-align: middle;
  float: left;
}
.well {border-radius: 10px; box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05) inset; background: url("images/bg/yl_grdnt_bg.gif") 0 -10px repeat-x;}
#esiForm .btn-group {white-space: normal;}

#content #main .popover-title {font-size:14px; font-weight: normal; background: url("images/bg/yl_grdnt_bg.gif") 0 -10px repeat-x;}
.icon-question-sign:hover, .icon-question-sign:focus {text-decoration:none}

#content #main .modal-header h2 {color: #DD4814; font-weight:normal}

#thesuperfooter .sub-wrapper,#footer .sub-wrapper {
/*  padding-left: 10%;*/
background: 
}



#superFooter {

padding-left: 0px;
width: 70%;
background: #CBE4ED;

}

#superFooter .sub-wrapper .this-site {

background: #FFFFFF;
padding-left: 10px;

}

#footer-nav .row .span2  {
width: 140px;
}  

.container {max-width:940px}

#content #main div.selection-box-container.row { margin-left: 0; }
#content #main div.selection-box-container.row div.selection-box {background:#fff5db; border:1px solid #dbdbdb; border-radius-5px; padding:20px; margin-top:5px; margin-bottom: 5px; min-height: 190px;}
#content #main div.selection-box-container.row .selection-box h3 { color: #fa6300; font-size: 1.34em; font-weight: bold; margin-top: 0; }
#content #main div.selection-box-container.row .selection-box p { color: #464646; font-size: 1em; font-weight: bold; margin-bottom: 1em; min-height: 70px;}



/*.printButton .btn{font-family: 'Roboto Condensed', sans-serif; color:#8B0000; text-transform:uppercase; font-weight:600; background: Salmon; margin-top:15px;
}*/
.printButton .btn{font-family: 'Roboto Condensed', sans-serif; color:#fff; text-transform:uppercase; font-weight:600; background: #f47735; margin-top:15px;
}

.btn:hover, .btn:focus {color:#fff;}
.btn .icon-chevron-right {display:none;}

.radio input[type="radio"], 
.checkbox input[type="checkbox"] {
-moz-transform: scale(1.2, 1.2); /* FF only */
height: 17px;
width: 17px;
margin-top: 1px;
}

.checkbox input[type="checkbox"] {
margin-left:-22px; 
}

.pull-right .checkbox input[type="checkbox"] {
margin-left:0;
}

tr.dataBridge td {
width: 300px;
}

tr.dataBridge td div{
margin-bottom: 20px;
}


label {cursor:text}

@media print {
   .navbar, 
   #footer {display:none;}
   .container {border:none}
   a:link:after, a:visited:after { content:""; }
   a:link:before, a:visited:before { content:""; }
}

/* sidebar */
.widget {
  list-style: none;
}
h2.widgettitle {
  color: #1F419B;
  margin-bottom: 5px;
  margin: 0 !important;
  padding: 10px 0 5px;
  font-size: 1.125em;
  line-height: 1.3em;
}
div.AdvancedText {
	padding: 0 0 10px;
}

/*snap prod*/

@media (min-width:980px){
	.page-id-11936 #content, .page-id-11936 #inner-content {
		padding: 0;
	}
	.page-id-11936 .snapApplication {
	  background-image: url('/wp-content/uploads/2014/07/BCU_SNAP_revised2.png');
	  background-repeat: no-repeat;
	  height: 240px;
	  padding: 0px 10px 0px 10px;
	}
	.page-id-11936 .snapLeft {
	  margin-top: 100px;
	  margin-bottom: 10px;
	  float: left;
	}
	.page-id-11936 #selectState.snapApplicationInner {
	  margin-top: 50px;
	  margin-left: 122px;
	}
	.page-id-11936 #selectState.snapApplicationInner select {
	  width: 200px;
	  height: 35px;
	}
	.page-id-11936 #selectState.snapApplicationInner input {
	  margin-top: -5px;
	  width: 40px;
	}
	.page-id-11936 p.fullPage {
	  margin-left: 50px;
	  margin-right: 50px;
	  font-size: 18px;
	  line-height: 23px;
	  margin-top: 18px;
	}
	.page-id-11936 .rowcol1.fullPage {
	  margin-left: 50px;
	  margin-top: 20px;
	  width: 375px;
	  float: left;
	  font-size: 18px;
	}
	
	.page-id-11936 .rowcol2.fullPage {
	  margin-right: 20px;
	  margin-top: 20px;
	  width: 375px;
	  float: right;
	  font-size: 18px;
	}
	.page-id-11936 .rowcol1.fullPage h3, .page-id-11936 .rowcol2.fullPage h3 {
	  font-size: 24px;
	}
	.page-id-11936 #successStories {
		clear: both;
	  background-image: url('/wp-content/themes/bcuwptheme/images/SNAPSuccessBanner.png');
	  background-repeat: no-repeat;
	  padding: 0px 10px 0px 10px;
	  /*width: 937px;*/
	  height: 290px;
	  /*overflow: visible;*/
	  margin-top: 40px;
	  margin-left: 0px;
	  /*margin-bottom: -30px;*/
	  display: inline-block;
	}
	.page-id-11936 #successImage {
	  float: left;
	}
	.page-id-11936 #successText {
	  margin-left: 320px;
	  margin-top: 75px;
	  display: inline-block;
	}
	
	.page-id-11936 #content #main h3.successLeft {
	  font-size: 24px;
	  margin-right: 30px;
	}
	.page-id-11936 .successRight {
	  margin-top: -5px;
	  font-size: 1.3em;
	  float: right;
	  margin-right: 30px;
	  font-style: italic;
	}
	.page-id-11936 #didYouKnow {
	  margin-left: 25px;
	  margin-top: 30px;
	  display: inline-block;
	}
	.page-id-11936 #didYouKnow p {
		font-size:  22px;
	}
}
.page-id-11936 #selectAState {
	  margin-right: 5px;
}
/* ... */

